# Elastic

./: .dockerignore  .gitignore  CHANGES.md  README.md  pyproject.toml
apps/api/: Dockerfile
apps/api/app/: main.py  models.py  reconciler.py  settings.py  store.py
apps/common/: metrics.py  obs.py
apps/web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js
apps/web/src/: App.tsx  api.ts  styles.css  types.ts
apps/worker/: Dockerfile
apps/worker/app/: main.py  service.py
docs/: architecture.md  aws-deploy.md  aws-validation.md  mvp.md
infra/k8s/base/: api-deployment.yaml  api-service.yaml  api-serviceaccount.yaml  configmap.yaml  kustomization.yaml  web-deployment.yaml  web-service.yaml  worker-deployment.yaml  worker-serviceaccount.yaml
infra/k8s/overlays/aws/: README.md  ingress.yaml  keda-scaledobject.yaml  kustomization.yaml
infra/local/: bootstrap_localstack.py  docker-compose.yml
infra/terraform/: README.md
infra/terraform/bootstrap/: main.tf  outputs.tf  variables.tf
infra/terraform/envs/dev/: .terraform.lock.hcl  README.md  backend.tf.example  ecr.tf  eks.tf  irsa.tf  locals.tf  network.tf  outputs.tf  storage.tf  terraform-output.sample.json  variables.tf  versions.tf
scripts/: build_push_ecr.py  chaos_demo.py  dev_up.py  install_eks_addons.py  lab_watch.py  render_aws_overlay.py  smoke_api.sh
tests/: conftest.py  test_api_jobs.py  test_bootstrap_localstack.py  test_dynamodb_store.py  test_lease_store.py  test_reconciler.py  test_startup_bootstrap.py  test_worker.py
(+4 files in other folders)
