[project]
name = "elastic"
version = "0.1.0"
description = "Elastic MVP scaffold"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "boto3>=1.39.0",
    "fastapi>=0.116.0",
    "lxml>=6.1.1",
    "pandas>=2.3.3",
    "prometheus-client>=0.25.0",
    "pydantic-settings>=2.10.0",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
